force-app/main/default/objects/Flotillas__c/Flotillas__c.object-meta.xml
<CustomObject>
    <label>פלוטילה</label>
    <nameField>
        <label>שם פלוטילה</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>פלוטילות</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>