force-app/main/default/objects/Flotillas__c/fields/AraeOfSail__c.field-meta.xml
<CustomField>
    <fullName>AraeOfSail__c</fullName>
    <label>אזור הפלגה</label>
    <length>15</length>
    <type>Text</type>
</CustomField>