force-app/main/default/objects/Flotillas__c/fields/destination__c.field-meta.xml
<CustomField>
    <fullName>destination__c</fullName>
    <label>יעד</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>יוון</fullName>
            </value>
            <value>
                <fullName>קרואטיה</fullName>
            </value>
            <value>
                <fullName>טורקיה</fullName>
            </value>
            <value>
                <fullName>איטליה</fullName>
            </value>
            <value>
                <fullName>צרפת</fullName>
            </value>
            <value>
                <fullName>תאילנד</fullName>
            </value>
            <value>
                <fullName>סיישל</fullName>
            </value>
            <value>
                <fullName>אנגליה</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>