force-app/main/default/objects/Flotillas__c/fields/FlotillaInstructor__c.field-meta.xml
<CustomField>
    <fullName>FlotillaInstructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>מדריך</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>פלוטילות</relationshipLabel>
    <relationshipName>FlotillaInstructor</relationshipName>
    <type>Lookup</type>
</CustomField>