force-app/main/default/objects/Flotillas__c/fields/InstructorFlight__c.field-meta.xml
<CustomField>
    <fullName>InstructorFlight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>טיסה למדריך</label>
    <type>Checkbox</type>
</CustomField>