force-app/main/default/objects/Flotillas__c/listViews/X2026.listView-meta.xml
<ListView>
    <fullName>X2026</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>FlotillaDate__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2026</value>
    </filters>
    <label>פלוטילות 2026</label>
</ListView>